--- a/app/src/main/res/layout/layout_listitem_horizental.xml
+++ b/app/src/main/res/layout/layout_listitem_horizental.xml
@@ -1,51 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parent_layout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="1dp">
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:cardCornerRadius="4dp"
-        app:cardMaxElevation="2dp"
-        app:cardElevation="1dp"
-        android:layout_centerInParent="true">
-
-    </androidx.cardview.widget.CardView>
+    android:layout_width="120dp"
+    android:layout_height="150dp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="5dp"
+    android:layout_margin="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="5dp"
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        >
+
+        <ImageView
             android:id="@+id/image"
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:scaleType="center"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/ic_launcher">
-
-        </de.hdodenhof.circleimageview.CircleImageView>
+            android:layout_marginTop="10dp"
+            android:scaleType="center"
+            android:src="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/image_name"
-            android:layout_below="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/image"
             android:layout_centerHorizontal="true"
-            android:gravity="center"
             android:layout_marginTop="5dp"
+            android:gravity="center"
             android:text="Tunisia"
             android:textColor="#000"
-            android:autoSizeTextType="uniform"
-            android:autoSizeMinTextSize="8sp"
-            android:autoSizeMaxTextSize="15sp"
-            android:textSize="17sp">
+            android:textSize="15sp">
 
         </TextView>
     </RelativeLayout>
 
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
+
+
